0.545 (12.08.2006) - John Siracusa <siracusa@mindspring.com>

    * Added param_exists_for_field() method to Rose::HTML::Form.
    * Added positive() and negative() methods to integer fields.
    * Fixed a bug that caused validation to fail for certain compound 
      fields with labels.  (Reported by Guillermo Roditi)
    * Improved error messages for empty split datetime fields.
    * Added class mapping for the "int" and "integer" field types.
    * Corrected the construction of the string overflow error message.
    * Improved importing of message constants.
    * Fixed a bug that caused a field in nested form with the same
      name as a field in its parent form to become invisible.

0.544 (11.29.2006) - John Siracusa <siracusa@mindspring.com>

    * Added a field_value() method to Rose::HTML::Form.  (Suggested by
      Guillermo Roditi)
    * Added validation and an error message for text field input that
      exceeds maxlength.  (Patch by Cees Hek)
    * Added the "disabled" boolean attribute to SelectBox and PopUpMenu.
      (Reported by Andrei Kozovski)

0.543 (11.22.2006) - John Siracusa <siracusa@mindspring.com>

    * Removed a stray reference to Scalar::Defer, which is not
      a prerequesite.  (Reported by Sebastian Riedel)

0.542 (11.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed localization inheritence for checkboxes, options, and
      other nested, labeled elements.

0.541 (10.20.2006) - John Siracusa <siracusa@mindspring.com>

    * Added German localization, translated by Uwe Voelker.
    * Added French localization, translated by Jacques Supcik.
    * Corrected some of the English error messages.

0.54 (10.06.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the has_error() method.
    * Added special handling to object_from_form() for checkboxes that
      set boolean columns in Rose::DB::Object-derived objects.
    * The xhtml_table() method for checkbox and radio button groups now