@@ -4,12 +4,13 @@
     * Added positive() and negative() methods to integer fields.
     * Fixed a bug that caused validation to fail for certain compound 
       fields with labels.  (Reported by Guillermo Roditi)
-    * Improved error messages for empty split datetime fields.
+    * Improved error messages for empty, split datetime fields.
     * Added class mapping for the "int" and "integer" field types.
     * Corrected the construction of the string overflow error message.
     * Improved importing of message constants.
-    * Fixed a bug that caused a field in nested form with the same
+    * Fixed a bug that caused a field in a nested form with the same
       name as a field in its parent form to become invisible.
+    * Made nested form/field name conflicts fatal.
 
 0.544 (11.29.2006) - John Siracusa <siracusa@mindspring.com>
 
